add flat styles in all pages

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,21 @@
-<p>
-  <strong>Commenter:</strong>
-  <%= comment.commenter %>
-</p>
- 
-<p>
-  <strong>Comment:</strong>
-  <%= comment.body %>
-</p>
- 
-<p>
-  <%= link_to 'Destroy Comment', [comment.article, comment],
-               method: :delete,
-               data: { confirm: 'Are you sure?' } %>
-</p>
+<div class="field-comments">
+  <div class="nick">
+    <p>
+      <strong>Nickname: <%= comment.commenter %> </strong>
+    </p>
+  </div>
+  
+  <div class="user-comment">
+    <p>
+      <strong>Comment:</strong>
+      <%= comment.body %>
+    </p>
+    
+    <p>
+      <%= link_to 'Delete Comment', [comment.article, comment],
+                  method: :delete,
+                  data: { confirm: 'Are you sure?' } %>
+    </p>
+  </div>
+  
+</div>
