--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,102 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+    margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.navbar {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 80px;
+    text-transform: uppercase;
+}
+
+.pages a {
+    margin-left: 10px;
+    text-decoration: none;
+    color:#000000;
+}
+
+.home a {
+    text-decoration: none;
+    color:#000000;
+}
+
+.home a:hover ,
+.pages a:hover {
+    text-decoration: underline;
+}
+
+.container {
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container h1 {
+    margin: 30px 0 30px 0;
+}
+
+td {
+    padding: 10px;
+    border-bottom: 1px solid ;
+}
+
+th {
+    background-color: rgba(127, 255, 0, 0.55);
+}
+
+.article {
+    height: 400px;
+    width: 400px;
+    border: 1px dashed rgba(127, 255, 0, 0.55);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.comments {
+    width: 400px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.comments h3 {
+    text-align: center;
+}
+
+.field-comments {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    flex-direction: column;
+}
+
+.user-comment {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 0 10px 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.55);
+    margin-bottom: 20px;
+}
+
+.user-comment a {
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #f10202;
+    padding: 5px;
+}
+
+form {
+    margin-bottom: 20px;
+}
