--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Edit article</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', articles_path %>
+<div class="container">
+    <div class="box-container">
+        <h1>Edit article</h1>
+        <%= render 'form' %>
+        <%= link_to 'Back', articles_path %>
+    </div>
+</div>
