--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,9 @@
-
-<h1>New article</h1>
- 
-<%= render 'form' %>
- 
-<%= link_to 'Back', articles_path %>
+<div class="container">
+    <div class="box-container">
+        <h1>New article</h1>
+        
+        <%= render 'form' %>
+        
+        <%= link_to 'Back', articles_path %>
+    </div>
+</div>
