--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,27 @@
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
- 
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
- 
-<h2>Comments</h2>
-<%= render @article.comments %>
- 
-<h2>Add a comment:</h2>
-<%= render 'comments/form' %>
- 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<div class="container">
+  <div class="box-container">
+    <div class="article">
+    <h3>
+      <strong>Title:</strong>
+      <%= @article.title %>
+    </h3>
+
+    <p>
+      <strong>Text:</strong>
+      <%= @article.text %>
+    </p>
+    </div>
+
+    <div class="comments">
+      <h3>Comments</h3>
+      <%= render @article.comments %>
+
+      <h2>Add a comment:</h2>
+      <%= render 'comments/form' %>
+      <div class="pages">
+        <%= link_to 'Edit', edit_article_path(@article) %> |
+        <%= link_to 'Back', articles_path %>
+      </div>
+    </div>
+  </div>
+</div>
